--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/my_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username = bestuser
 spring.datasource.password = bestuser
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=nikitaets2016@yandex.ru
+spring.mail.password=fovzkwplyyqyrkkm
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
