--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
+        <!--<version>3.2.0</version>-->
+        <version>2.7.17</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.kadukov.spring.project</groupId>
@@ -14,7 +15,8 @@
     <name>spring_project</name>
     <description>spring_project</description>
     <properties>
-        <java.version>17</java.version>
+        <!--<java.version>17</java.version>-->
+        <java.version>11</java.version>
     </properties>
     <dependencies>
 
@@ -43,9 +45,15 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
 
